start-sanitize-r5900
Sun Mar 22 13:21:01 1998  Jeffrey A Law  (law@cygnus.com)

	* config/tc-mips.c (validate_mips_insn): Handle r5900 operands.

        * config/tc-mips.c (append_insn): Handle BFD_RELOC_MIPS16_S3.
        (mips_ip): Handle 'O' operand.
        (md_apply_fix): Handle BFD_RELOC_MIPS16_S3.

end-sanitize-r5900
Fri Mar 20 19:15:44 1998  Ian Lance Taylor  <ian@cygnus.com>

	* aclocal.m4, configure: Rebuild with libtool 1.2.

start-sanitize-r5900
Fri Mar 20 09:04:13 1998  Jeffrey A Law  (law@cygnus.com)

        * config/tc-mips.c: Change '%' to '#' in r5900 code to avoid conflict
        with vr5400 support.

end-sanitize-r5900
Thu Mar 19 16:03:12 1998  Nick Clifton  <nickc@cygnus.com>

	* config/tc-arm.c (md_apply_fix3): fix code to test the range of
	PC relative branches (PR15358).  Patch courtesy of Jonathan
	Walton. 

start-sanitize-r5900
Thu Mar 19 14:19:27 1998  Jeffrey A Law  (law@cygnus.com)

	* config/tc-mips.c (mips_ip): Handle opcodes which have the form
	"name.completer" where only the name is actually in the opcode
	table.  Allow various operands for base register in load/store
	instructions.  Handle various new argument characters for the
	cop2/vu0 co-processor.

end-sanitize-r5900
start-sanitize-sky
	Wed Mar 18 13:54:04 1998  Frank Ch. Eigler  <fche@cygnus.com>

	* config/tc-dvp.c (s_dmadata): Force 16-byte alignment for ".dmadata"
	pseudo-op.
end-sanitize-sky
	
Wed Mar 18 09:29:51 1998  Nick Clifton  <nickc@cygnus.com>

	* configure.in (emulations): Add thumb-pe target.

	* configure (emulations): Add thumb-pe target.

1998-03-17  Ken Raeburn  <raeburn@cygnus.com>

	* itbl-lex.l (yywrap): Don't define if already defined as a
	macro.

start-sanitize-sky
Tue Mar 17 10:40:54 1998  Doug Evans  <devans@canuck.cygnus.com>

	* config/tc-dvp.c (md_begin): Turn dma/vif packing on by default.
	(assemble_dma): Only output 8 bytes for actual dma insn if dma/vif
	packing is enabled.  Emit VIF cpu marker after dma insn.
